--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,7 @@
         <item name="android:layout_marginLeft">10dp</item>
         <item name="android:textSize">12sp</item>
         <item name="android:fontFamily">sans-serif</item>
+        <item name="android:onClick">onCheckboxClicked</item>
 
     </style>
 
