--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -16,6 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:focusable="true"
             android:fontFamily="sans-serif-smallcaps"
             android:text="Questions"
             android:textColor="#102027"
@@ -149,15 +150,22 @@
                 android:layout_marginLeft="10sp"
                 android:orientation="horizontal">
 
-                <RadioButton
-                    android:id="@+id/Q5_optionYes"
-                    style="@style/RadioButtonChoice"
-                    android:text="Yes" />
+                <RadioGroup
+                    android:id="@+id/radioGroup_Q5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
-                <RadioButton
-                    android:id="@+id/Q5_optionNo"
-                    style="@style/RadioButtonChoice"
-                    android:text="No" />
+                    <RadioButton
+                        android:id="@+id/Q5_optionYes"
+                        style="@style/RadioButtonChoice"
+                        android:text="Yes" />
+
+                    <RadioButton
+                        android:id="@+id/Q5_optionNo"
+                        style="@style/RadioButtonChoice"
+                        android:text="No" />
+
+                </RadioGroup>
 
             </LinearLayout>
 
@@ -178,15 +186,22 @@
                 android:layout_marginLeft="10dp"
                 android:orientation="horizontal">
 
-                <RadioButton
-                    android:id="@+id/Q6_optionYes"
-                    style="@style/RadioButtonChoice"
-                    android:text="Yes" />
+                <RadioGroup
+                    android:id="@+id/radioGroup_Q6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
-                <RadioButton
-                    android:id="@+id/Q6_optionNo"
-                    style="@style/RadioButtonChoice"
-                    android:text="No" />
+                    <RadioButton
+                        android:id="@+id/Q6_optionYes"
+                        style="@style/RadioButtonChoice"
+                        android:text="Yes" />
+
+                    <RadioButton
+                        android:id="@+id/Q6_optionNo"
+                        style="@style/RadioButtonChoice"
+                        android:text="No" />
+
+                </RadioGroup>
 
             </LinearLayout>
 
@@ -197,36 +212,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:onClick="submitAnswers"
             android:text="Submit Answers" />
 
 
-
         <TextView
-            android:id="@+id/answer_summary_textView"
+            android:id="@+id/summary_tex_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Answers Summary: "
-            android:textSize="20sp"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:padding="20dp"
+            android:text = ""/>
 
-        <TextView
+        <Button
+            android:id="@+id/btn_reset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Score: "
-            android:textSize="20sp"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:text="Reset Quiz" />
 
-        <TextView
-            android:id="@+id/score_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:textSize="20sp"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"/>
 
     </LinearLayout>
 
