--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,8 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">#ab47bc</item>
+
     </style>
 
     <style name="CheckBox">
@@ -14,8 +15,9 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">5dp</item>
         <item name="android:layout_marginLeft">10dp</item>
-        <item name="android:textSize">12sp</item>
-        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">#4f5b62</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
 
     </style>
 
@@ -24,9 +26,9 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">8dp</item>
-        <item name="android:textSize">15sp</item>
-        <item name="android:textColor">#102027</item>
-        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#263238</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
 
     </style>
 
@@ -37,7 +39,7 @@
         <item name="android:layout_marginLeft">10dp</item>
         <item name="android:textSize">12sp</item>
         <item name="android:inputType">textCapWords</item>
-        <item name="android:fontFamily">casual</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
 
     </style>
 
@@ -45,9 +47,10 @@
         <!-- Style for all radio buttons choices -->
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">#4f5b62</item>
         <item name="android:inputType">textCapWords</item>
-        <item name="android:fontFamily">casual</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
 
     </style>
 
