--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,27 +8,46 @@
     android:background="#ffffff"
     tools:context=".MainActivity">
 
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:textSize="30sp"
-        android:layout_marginTop="30dp"
+        android:textSize="25sp"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="160dp"
+        android:layout_marginTop="20dp"
         android:padding="5dp"
         android:fontFamily="sans-serif-condensed"
         android:textColor="#790e8b"
-        android:text="@string/spanish_vocabulary_quiz" />
+        android:text="SPANISH VOCABULARY QUIZ" />
+
 
     <ImageView
+        android:id="@+id/spanish1_image"
         android:src="@drawable/spanish1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="450dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:textSize="25sp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="160dp"
+        android:padding="5dp"
+        android:fontFamily="sans-serif-condensed"
+        android:textColor="#4f5b62"
+        android:text="Looking forward learning Spanish ?" />
 
     <Button
         android:id="@+id/start_quiz_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
         android:layout_centerHorizontal="true"
         android:textSize="20sp"
         android:fontFamily="sans-serif-condensed"
