--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,18 +26,18 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">8dp</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">17sp</item>
         <item name="android:textColor">#263238</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
 
     </style>
 
     <style name="AnswerField">
-        <!-- Style for all questions heading -->
+        <!-- Style for fields of edit text answers -->
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginLeft">10dp</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:inputType">textCapWords</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
 
@@ -47,7 +47,7 @@
         <!-- Style for all radio buttons choices -->
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">13sp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:textColor">#4f5b62</item>
         <item name="android:inputType">textCapWords</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
